examples/test/testpolicy6690.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6690
  namespace: namespace119
spec:
  podSelector:
    matchLabels:
      key37: value8
      key45: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value29
          key0: value30
          key39: value0
      podSelector:
        matchLabels:
          key46: value27
          key30: value31
          key33: value12
